--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,93 @@
-/* You can add global styles to this file, and also import other style files */
+@import "variables";
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  width: 100vw;
+  height: 100vh;
+  background-color: $white-color;
+}
+
+ul,
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.container {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.button {
+  padding: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: $primary-color;
+  font-family: "Inter", sans-serif;
+  font-weight: 700;
+  color: $bold-text-color;
+  border: 1px solid transparent;
+  cursor: pointer;
+
+  &__main {
+    width: 224px;
+    height: 60px;
+  }
+
+  &__card {
+    width: 242px;
+    height: 50px;
+  }
+
+  &__form {
+    width: 330px;
+    height: 60px;
+  }
+}
+
+.error small {
+  color: red;
+  font-size: 12px;
+}
+
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.4);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  &__content {
+    background: white;
+    padding: 24px 36px;
+    border-radius: 8px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+
+    h2 {
+      font-family: "Inter", sans-serif;
+      font-weight: 600;
+      font-size: 35px;
+      color: $secondary-color;
+    }
+  }
+}
