--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,8 @@ body {
   width: 100vw;
   height: 100vh;
   background-color: $white-color;
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
 }
 
 ul,
@@ -40,6 +42,7 @@ a {
   color: $bold-text-color;
   border: 1px solid transparent;
   cursor: pointer;
+  font-size: 16px;
 
   &__main {
     width: 224px;
